# restful-server-only-server

./: .gitignore  CMakeLists.txt  Makefile  README.md  package-lock.json
doc/: 项目实现细节.md
my_restful-server/: CMakeLists.txt
my_restful-server/src/: main.cpp
my_restful-server/src/http/: http_server.cpp
pierced-master/: README.md
src/: import_lib.cpp  main.cpp
src/http/: FormDataParser.cpp  FormDataParser.h  FormItem.h  http_server.cpp  http_server.hpp  json.hpp  mongoose.c  mongoose.h
src/infer/: simple_yolo.cu
src/python_scripts/paddleOcr/: paddleOcr.py  run_paddleOcr.py
src/python_scripts/yolov5_classify_life_jacket/: Classify.py  alexnet.py  detect1.py  letterbox.py  requirements.txt  run_yolov5_classify_life_jacket.py  val2.py
src/python_scripts/yolov5_classify_life_jacket/utils/: datasets.py  metrics.py  plots.py
tests/: test2.py
